--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,77 @@
-# Prerequisites
-*.d
+#include<stdio.h>
+#include<stdlib.h>
+#include<time.h>
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+int stonepaperscissors(char you, char comp){
+    // returns 1 if you win, -1 if you lose and 0 if draw
+    // Condition for draw
+    // Cases covered:
+    // ss
+    // gg
+    // ww
+    if(you == comp){
+        return 0;
+    }
 
-# Linker output
-*.ilk
-*.map
-*.exp
+    // Non-draw conditions
+    // Cases covered:
+    // sg
+    // gs
+    // sw 
+    // ws
+    // gw
+    // wg
+    
 
-# Precompiled Headers
-*.gch
-*.pch
+    if(you=='s' && comp=='g'){
+        return -1;
+    }
+    else if(you=='g' && comp=='s'){
+        return 1;
+    }
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+    if(you=='s' && comp=='w'){
+        return 1;
+    }
+    else if(you=='w' && comp=='s'){
+        return -1;
+    }
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+    if(you=='g' && comp=='w'){
+        return -1;
+    }
+    else if(you=='w' && comp=='g'){
+        return 1;
+    }
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+}
+int main(){
+    char you, comp;
+    srand(time(0));
+    int number = rand()%100 + 1;
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+    if(number<33){
+        comp = 's';
+    }
+    else if(number>33 && number<66){
+        comp='w';
+    }
+    else{
+        comp='g';
+    }
+    
+    printf("Enter 's' for stone, 'p' for paper and 'g' for scissors\n");
+    scanf("%c", &you);
+    int result = stonepaperscissors(you, comp);
+    if(result ==0){
+        printf("Game draw!\n");
+    }
+    else if(result==1){
+        printf("You win!\n");
+    }
+    else{
+        printf("You Lose!\n");
+    }
+    printf("You chose %c and computer chose %c. ", you, comp);
+    return 0;
+}
